# seline-agent

./: .air.toml  .dockerignore  .env.sample  .gitignore  CHECKLIST.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: publish.yml
cmd/agent/: main.go
internal/config/: config.go
internal/constants/: constants.go
internal/contextmgr/: context.go  session.go
internal/gateway/: debounce.go  errors.go  gateway.go  messages.go  status.go
internal/llm/: llm.go
internal/logging/: logging.go
internal/prompts/: compaction.md  prompts.go  soul.md  system.md
internal/provider/: resolver.go
internal/tools/: files.go  registry.go  shell.go  util.go  web.go
internal/types/: types.go
src/agent/: api.py  config.py  constants.py  context.py  llm.py  logger.py  main.py  prompts.py  telegram_agent.py  utils.py
src/agent/context/: __init__.py  session.py
src/agent/gateway/: __init__.py  agent.py  debounce.py  error.py  messages.py  status.py
src/agent/prompts/: __init__.py  additional.md  prompt.py  system.md
src/agent/provider/: __init__.py  resolver.py
src/agent/tools/: __init__.py  files.py  registry.py  shell.py  web.py
