[project]
name = "seline-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docstring-parser>=0.18.0",
    "httpx>=0.28.1",
    "human-id>=0.2.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[project.scripts]
agent = "agent.main:main"

[tool.uv]
package = true
